@@ -2,6 +2,9 @@
 # $Id$
 mm-dd-yy - Version 5.1.42
 
+  - Fix for Bug#84189 (25250938), Allow null when extracting java.time.* classes from ResultSet.
+    Thanks to Martin Desharnais for his contribution.
+
   - Fix for Bug#70808 (17757070), Set sessionVariables in a single query.
 
   - Fix for Bug#77192 (21170603), Description for the Property replicationConnetionGroup Missing from the Manual.
